# rai-play-sound-terminal

./: .gitignore  README.md  pyproject.toml
rai_radio/: main.py
rai_radio/tcss/: style.tcss
rai_radio/widgets/: tintoria.py  widgets.py
