[tool.poetry]
name = "rai-radio"
version = "0.1.0"
description = ""
authors = ["jacklapinza <jack1989s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.81.0"
textual-dev = "^1.6.1"
requests = "^2.32.3"
numpy = "^2.1.1"
sounddevice = "^0.5.0"
beautifulsoup4 = "^4.12.3"
yt-dlp = "^2024.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
